Replace `toList()` with `Collectors.toList()` for compatibility with older Java versions.